# python-utility-library

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
docs/: PytorchInstallResearch5080.md
modules/: __init__.py
modules/pdf_to_markdown/: __init__.py  converter.py  run_batch.py  run_single.py
modules/pdf_to_markdown/outputs/: Godot Hex-Grid MMO Project Structure.md  Locality-of-Behavior (LoB) Directory Layout.md
modules/pdf_to_markdown/tests/: __init__.py  test_converter.py
scripts/: activate_venv.bat  install_deps.bat  lint_code.bat  run_tests.bat  setup_venv.bat  setup_venv.ps1
